VR: Fix VR DOFF test segfaults

We were trying to cast kExitPrompt to Prompt, while kExitPrompt was the root of
the prompt subtree. This CL makes kExitPrompt the actual prompt, and leaves the
root nameless.

Bug: 826381
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I390eb1e0d287f975910c707f4de7766d55be3cbf
Reviewed-on: https://chromium-review.googlesource.com/984039
Commit-Queue: Yash Malik <ymalik@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546538}
Former-commit-id: 33713761abcc8f364b212ea16bc3d278e18b8987