chrome/browser/vr/elements/ui_element_name.h
@@ -104,7 +104,6 @@ enum UiElementName {
   kExitWarningBackground,
   kExitPrompt,
   kAudioPermissionPrompt,
-  kAudioPermissionPromptShadow,
   kAudioPermissionPromptBackplane,
   kPermissionDialogBackplane,
   kWebVrUrlToastTransientParent,
